# zmk-paw3395-driver

./: CMakeLists.txt  Kconfig  README.md
dts/behaviors/: paw3395.dtsi
dts/bindings/: pixart,paw3395.yml
dts/bindings/behaviors/: zmk,behavior-paw3395-calibrate.yaml  zmk,behavior-paw3395-power-mode-toggle.yaml
include/: paw3395.h  pixart.h
include/dt-bindings/zmk/: paw3395-dt.h  paw3395-modes.h
lib/paw3395/include/: paw3395.h
src/: paw3395.c
src/behaviors/: CMakeLists.txt  behavior_paw3395_calibrate.c  behavior_paw3395_power_mode_toggle.c
